kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: codexrelic-api-service
spec:
  type: NodePort
  selector:
    app: codexrelic-api
  ports:
    - port: 80
      targetPort: 3000
      nodePort: 30080
